tests/errors/basic_typechecking.vir
mod Foo {
    incoming inp0 : Word[8] async


    outgoing out0 : Word[7] async

    outgoing out1 : Word[7] async

    outgoing out2 : Bit async

    outgoing out3 : Word[7] async

    outgoing out4 : Bit async


    // CHECK: Wrong type: Expected Word[7] but found Word[8]
    out0 := inp0

    // CHECK: Wrong type: Expected Word[7] but found Bit
    out1 := false

    // CHECK: Wrong type: Expected Bit but found Word[7]
    out2 := 0w7

    // 0 is an untyped word literal; Word[7] context makes it fit with no error
    // CHECK-NOT: doesn't fit
    out3 := 0

    // An untyped word literal (0) cannot be used where Bit is expected
    // CHECK: Expected type Bit which is not a Word type
    out4 := 0
}

mod TruncWider {
    incoming x : Word[4] async

    outgoing out : Word[8] async


    // CHECK: Cannot truncate Word[4] to the larger type Word[8]

    out := trunc(x)
}

// CHECK: Check failed
